This is the changelog file for the POCO C++ Libraries.

Release 1.9.5 (2020-XX-XX)
==========================

- TODO


Release 1.9.4 (2019-09-18)
==========================

- fixed GH #2784: Upgrade bundled expat XML parser library to release 2.2.8,
  which fixes CVE-2019-15903.


Release 1.9.3 (2019-08-20)
==========================

- fixed GH #2603: Remove incorrect upper size limits for SSL certificates in NetSSL_Win
- fixed GH #2661: Poco::Zip::ZipArchive cannot load new tomcat.zip file (additional fix)
- fixed GH #2742: Support of vs150 & vs160 with the official Microsoft localization executable,
  vswhere.exe, installed by MSVC starting from VS2017
- Data/ODBC: make binding of std::string configurable (SQL_LONGVARCHAR - default or SQL_VARCHAR)
  through a global setting (Poco::Data::ODBC::Connector::bindStringToLongVarChar()).
- added Poco::SharedLibrary::setSearchPath() (currently implemented on Windows only)
- Windows required minimum version is now Windows XP SP2
- upgraded bundled SQLite to 3.29.0
- CppParser now supports type aliases defined with using keyword.
- PageCompiler: added support for adding Content-Security-Policy and Cache-Control headers.


Release 1.9.2 (2019-07-02)
==========================

- fixed GH #2736: Error using CMake gui - latest version
- fixed GH #2737: Bundles vulnerable copy of Expat — please upgrade to Expat 2.2.7
- fixed GH #2738: Poco::AccessExpireStrategy::onGet() must not extend expiration time after expiration


Release 1.9.1 (2019-06-24)
==========================

- Added support for building with different OpenSSL distributions on Windows.
  See the POCO_EXTERNAL_OPENSSL macro defined in Foundation/include/Poco/Config.h
  for options.
- Added Poco::Net::HTTPClientSession::flushRequest()
- Added Poco::Net::WebSocket::setMaxPayloadSize() and Poco::Net::WebSocket::getMaxPayloadSize()
  to specify a maximum acceptable payload size for Poco::Net::WebSocket::receiveFrame().