@@ -111,8 +111,8 @@ void PKCS12ContainerTest::fullCert(const X509Certificate& x509)
 	std::string emailAddress(x509.subjectName(X509Certificate::NID_PKCS9_EMAIL_ADDRESS));
 	std::string serialNumber(x509.serialNumber());
 
-	assert (subjectName == "/C=CH/ST=Zug/O=Crypto Vally/CN=CV Server");
-	assert (issuerName == "/C=CH/ST=Zug/O=Crypto Vally/CN=CV Intermediate CA v3");
+	assert (subjectName == "C=CH,ST=Zug,O=Crypto Vally,CN=CV Server");
+	assert (issuerName == "C=CH,ST=Zug,O=Crypto Vally,CN=CV Intermediate CA v3");
 	assert (commonName == "CV Server");
 	assert (country == "CH");
 	assert (localityName.empty());
@@ -139,8 +139,8 @@ void PKCS12ContainerTest::fullList(const PKCS12Container::CAList& caList,
 		assert (caNamesList[certOrder[1]].empty());
 	}
 
-	assert (caList[certOrder[0]].subjectName() == "/C=CH/ST=Zug/O=Crypto Vally/CN=CV Root CA v3");
-	assert (caList[certOrder[0]].issuerName() == "/C=CH/ST=Zug/O=Crypto Vally/CN=CV Root CA v3");
+	assert (caList[certOrder[0]].subjectName() == "C=CH,ST=Zug,O=Crypto Vally,CN=CV Root CA v3");
+	assert (caList[certOrder[0]].issuerName() == "C=CH,ST=Zug,O=Crypto Vally,CN=CV Root CA v3");
 	assert (caList[certOrder[0]].commonName() == "CV Root CA v3");
 	assert (caList[certOrder[0]].subjectName(X509Certificate::NID_COUNTRY) == "CH");
 	assert (caList[certOrder[0]].subjectName(X509Certificate::NID_LOCALITY_NAME).empty());
@@ -152,8 +152,8 @@ void PKCS12ContainerTest::fullList(const PKCS12Container::CAList& caList,
 	assert (caList[certOrder[0]].version() == 3);
 	assert (caList[certOrder[0]].signatureAlgorithm() == "sha256WithRSAEncryption");
 
-	assert (caList[certOrder[1]].subjectName() == "/C=CH/ST=Zug/O=Crypto Vally/CN=CV Intermediate CA v3");
-	assert (caList[certOrder[1]].issuerName() == "/C=CH/ST=Zug/O=Crypto Vally/CN=CV Root CA v3");
+	assert (caList[certOrder[1]].subjectName() == "C=CH,ST=Zug,O=Crypto Vally,CN=CV Intermediate CA v3");
+	assert (caList[certOrder[1]].issuerName() == "C=CH,ST=Zug,O=Crypto Vally,CN=CV Root CA v3");
 	assert (caList[certOrder[1]].commonName() == "CV Intermediate CA v3");
 	assert (caList[certOrder[1]].subjectName(X509Certificate::NID_COUNTRY) == "CH");
 	assert (caList[certOrder[1]].subjectName(X509Certificate::NID_LOCALITY_NAME).empty());
@@ -212,8 +212,8 @@ void PKCS12ContainerTest::certsOnlyList(const PKCS12Container::CAList& caList,
 		assert (caNamesList[certOrder[4]] == "vally-ca");
 	}
 
-	assert (caList[certOrder[0]].subjectName() == "/C=US/O=Let's Encrypt/CN=Let's Encrypt Authority X3");
-	assert (caList[certOrder[0]].issuerName() == "/C=US/O=Internet Security Research Group/CN=ISRG Root X1");
+	assert (caList[certOrder[0]].subjectName() == "C=US,O=Let's Encrypt,CN=Let's Encrypt Authority X3");
+	assert (caList[certOrder[0]].issuerName() == "C=US,O=Internet Security Research Group,CN=ISRG Root X1");
 	assert (caList[certOrder[0]].commonName() == "Let's Encrypt Authority X3");
 	assert (caList[certOrder[0]].subjectName(X509Certificate::NID_COUNTRY) == "US");
 	assert (caList[certOrder[0]].subjectName(X509Certificate::NID_LOCALITY_NAME).empty());
@@ -225,8 +225,8 @@ void PKCS12ContainerTest::certsOnlyList(const PKCS12Container::CAList& caList,
 	assert (caList[certOrder[0]].version() == 3);
 	assert (caList[certOrder[0]].signatureAlgorithm() == "sha256WithRSAEncryption");
 
-	assert (caList[certOrder[1]].subjectName() == "/C=US/O=Let's Encrypt/CN=Let's Encrypt Authority X3");
-	assert (caList[certOrder[1]].issuerName() == "/O=Digital Signature Trust Co./CN=DST Root CA X3");
+	assert (caList[certOrder[1]].subjectName() == "C=US,O=Let's Encrypt,CN=Let's Encrypt Authority X3");
+	assert (caList[certOrder[1]].issuerName() == "O=Digital Signature Trust Co.,CN=DST Root CA X3");
 	assert (caList[certOrder[1]].commonName() == "Let's Encrypt Authority X3");
 	assert (caList[certOrder[1]].subjectName(X509Certificate::NID_COUNTRY) == "US");
 	assert (caList[certOrder[1]].subjectName(X509Certificate::NID_LOCALITY_NAME).empty());
@@ -238,8 +238,8 @@ void PKCS12ContainerTest::certsOnlyList(const PKCS12Container::CAList& caList,
 	assert (caList[certOrder[1]].version() == 3);
 	assert (caList[certOrder[1]].signatureAlgorithm() == "sha256WithRSAEncryption");
 
-	assert (caList[certOrder[2]].subjectName() == "/C=US/O=Internet Security Research Group/CN=ISRG Root X1");
-	assert (caList[certOrder[2]].issuerName() == "/C=US/O=Internet Security Research Group/CN=ISRG Root X1");
+	assert (caList[certOrder[2]].subjectName() == "C=US,O=Internet Security Research Group,CN=ISRG Root X1");
+	assert (caList[certOrder[2]].issuerName() == "C=US,O=Internet Security Research Group,CN=ISRG Root X1");
 	assert (caList[certOrder[2]].commonName() == "ISRG Root X1");
 	assert (caList[certOrder[2]].subjectName(X509Certificate::NID_COUNTRY) == "US");
 	assert (caList[certOrder[2]].subjectName(X509Certificate::NID_LOCALITY_NAME).empty());
@@ -251,8 +251,8 @@ void PKCS12ContainerTest::certsOnlyList(const PKCS12Container::CAList& caList,
 	assert (caList[certOrder[2]].version() == 3);
 	assert (caList[certOrder[2]].signatureAlgorithm() == "sha256WithRSAEncryption");
 
-	assert (caList[certOrder[3]].subjectName() == "/C=CH/ST=Zug/O=Crypto Vally/CN=CV Root CA v3");
-	assert (caList[certOrder[3]].issuerName() == "/C=CH/ST=Zug/O=Crypto Vally/CN=CV Root CA v3");
+	assert (caList[certOrder[3]].subjectName() == "C=CH,ST=Zug,O=Crypto Vally,CN=CV Root CA v3");
+	assert (caList[certOrder[3]].issuerName() == "C=CH,ST=Zug,O=Crypto Vally,CN=CV Root CA v3");
 	assert (caList[certOrder[3]].commonName() == "CV Root CA v3");
 	assert (caList[certOrder[3]].subjectName(X509Certificate::NID_COUNTRY) == "CH");
 	assert (caList[certOrder[3]].subjectName(X509Certificate::NID_LOCALITY_NAME).empty());
@@ -264,8 +264,8 @@ void PKCS12ContainerTest::certsOnlyList(const PKCS12Container::CAList& caList,
 	assert (caList[certOrder[3]].version() == 3);
 	assert (caList[certOrder[3]].signatureAlgorithm() == "sha256WithRSAEncryption");
 
-	assert (caList[certOrder[4]].subjectName() == "/C=CH/ST=Zug/O=Crypto Vally/CN=CV Intermediate CA v3");
-	assert (caList[certOrder[4]].issuerName() == "/C=CH/ST=Zug/O=Crypto Vally/CN=CV Root CA v3");
+	assert (caList[certOrder[4]].subjectName() == "C=CH,ST=Zug,O=Crypto Vally,CN=CV Intermediate CA v3");
+	assert (caList[certOrder[4]].issuerName() == "C=CH,ST=Zug,O=Crypto Vally,CN=CV Root CA v3");
 	assert (caList[certOrder[4]].commonName() == "CV Intermediate CA v3");
 	assert (caList[certOrder[4]].subjectName(X509Certificate::NID_COUNTRY) == "CH");
 	assert (caList[certOrder[4]].subjectName(X509Certificate::NID_LOCALITY_NAME).empty());
