@@ -5,7 +5,9 @@ AAAIntroduction
 
 !!Summary of Changes
 
-  - TODO
+  - GH #2869: X509Certificate does not render UTF-8 characters in subjectName
+  - GH #2879: Add support for SameSite attribute in HTTPCookie
+  - GH #2743: X509Certificate validFrom expiresOn Date parsing
 
 
 !!!Release 1.9.4
